filter algo + responsive

--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
             <form class=search>
                 <input type="search" name="search" id="search" class="search--bar" placeholder="Rechercher un ingrédient, appareil, unstensiles ou une recettes">
                     <button class="search--icon"></button>
-                </input>
             </form>
         </header>
         <main>
-            <div class="tags"></div>
+            <div class="tag__principal">
+                <span class="tag__secondaire" id="tagBySearch"></span>
+                <span class="tag__secondaire" id="tagByTag"></span>
+            </div>
             <div class="selects"></div>
             <div class="card"></div>
+
         </main>
             <script src="./dist/bundle.js"></script>
     </body>
